--- a/Baseball/Baseball_D.htm
+++ b/Baseball/Baseball_D.htm
@@ -169,6 +169,18 @@
     <td width="200"><img src="Images/1987 Topps Autos/662 DiPino.jpeg" width="200"> </td>
     <td width="200"><img src="Images/1987 Topps Autos/528 Dixon.jpeg" width="200"> </td>
     </tr>
+    <tr>
+        <td>
+            R.A. Dickey
+            <br>2001 - 2017
+            <br>2016 Topps Heritage
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="200" src="Images/MLB/RA Dickey.jpeg">
+        </td>
+    </tr>
     </table>
 <h1 id="Do">Do</h1>
     <table align="center" border="1" cellpadding="5" cellspacing="5">
