--- a/Baseball/Baseball_E.htm
+++ b/Baseball/Baseball_E.htm
@@ -21,7 +21,7 @@
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
  <pre>
-    <a href="#Ei">Ei</a> <a href="#Ev">Ev</a>
+    <a href="#Ei">Ei</a> <a href="#Er">Er</a> <a href="#Ev">Ev</a>
  </pre>
 <h1 id="Ei">Ei</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -35,6 +35,21 @@
 </tr>
 <tr>
 <td width="200"><img src="Images/1987 Topps Autos/371 Eichorn.jpeg" width=200> </td>
+</tr>
+</table>
+<h1 id="Er">Er</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+<tr>
+<td>
+    <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+    Carl Erskine
+    <br>1948 - 1959
+    <br>Diamond Signatures
+</td>
+
+</tr>
+<tr>
+<td width="200"><img src="Images/MLB/Carl Erskine.jpeg" width=200> </td>
 </tr>
 </table>
 <h1 id="Ev">Ev</h1>
