--- a/Baseball/Baseball_J.htm
+++ b/Baseball/Baseball_J.htm
@@ -32,10 +32,18 @@
             <br>1965 - 1982
             <br>1982 Donruss
         </td>
+        <td>
+            Larry Jaster
+            <br>1965 - 1972
+            <br>1969 Topps
+        </td>
     </tr>
     <tr>
         <td>
         <img width="200" src="Images/MLB/Grant Jackson.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Larry Jaster.jpeg">
         </td>
     </tr>
  </table>
