--- a/Baseball/Baseball_C.htm
+++ b/Baseball/Baseball_C.htm
@@ -40,20 +40,19 @@
 </td>
 </tr>
 <tr>
-<td width="200"><img src="Images/1987 Topps Autos/220 Carter.jpeg" width=200> </td>
-<td width="200"><img src="Images/1987 Topps Autos/355 Carmam.jpeg" width="200"> </td>
-<td width="200"><img src="Images/1987 Topps Autos/674 Campbell.jpeg" width="200"> </td>
+<td width="300"><img src="Images/1987 Topps Autos/220 Carter.jpeg" width="300"> </td>
+<td width="300"><img src="Images/1987 Topps Autos/355 Carmam.jpeg" width="300"> </td>
+<td width="300"><img src="Images/1987 Topps Autos/674 Campbell.jpeg" width="300"> </td>
 </tr>
 <tr>
     <td>Casey Candaele
         <br>1986 - 1997
         <br>1987 Topps Traded
     </td>
-    <td></td>
-    <td></td>
+
 </tr>
 <tr>
-    <td><img width="200" src="Images/1987 Topps Traded/Casey Candaele.jpeg">
+    <td><img width="300" src="Images/1987 Topps Traded/Casey Candaele.jpeg">
     </td>
 </tr>
 </table>
@@ -70,13 +69,12 @@
         <br>1971 - 1987
         <br>1987 Topps Traded
     </td>
-    <td>
-    </td>
+ 
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/129 Cerone.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Traded/Ron Cey.jpeg" width="200"> </td>
-    <td width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/129 Cerone.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Traded/Ron Cey.jpeg" width="300"> </td>
+
     </tr>
     </table>
 
@@ -93,13 +91,12 @@
         <br>1973 - 1983
         <br>1984 Topps
     </td>
-    <td>
-    </td>
+ 
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/777 Chambliss.jpeg" width=200> </td>
-    <td width="200"><img src="Images/MLB/Larry Christenson.jpeg" width="200"> </td>
-    <td width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/777 Chambliss.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/MLB/Larry Christenson.jpeg" width="300"> </td>
+
     </tr>
     </table>
 <h1>Ci</h1>
@@ -113,7 +110,7 @@
     </tr>
     <tr>
         <td>
-            <img width="200" src="Images/MLB/Mark Ciardi.jpeg">
+            <img width="300" src="Images/MLB/Mark Ciardi.jpeg">
         </td>
     </tr>
 </table>
@@ -130,13 +127,12 @@
         <br>1977-1991
         <br>1987 Topps
     </td>
-    <td>
-    </td>
+
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/016 Clements.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/122 Clancy.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/016 Clements.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/122 Clancy.jpeg" width="300"> </td>
+
     </tr>
 </table>
 
@@ -160,9 +156,9 @@
     </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/010 Cooper.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/217 Codiroli.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/338 Conroy.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/010 Cooper.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/217 Codiroli.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/338 Conroy.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -177,8 +173,8 @@
         </td>
     </tr>
     <tr>
-        <td width="200"><img src="Images/1987 Topps Autos/423 Cocanower.jpeg" width="200"></td>
-        <td width="200"><img src="Images/Negro Leagues/Jim Cobbin.jpeg" width="200"></td>
+        <td width="300"><img src="Images/1987 Topps Autos/423 Cocanower.jpeg" width="300"></td>
+        <td width="300"><img src="Images/Negro Leagues/Jim Cobbin.jpeg" width="300"></td>
     </tr>
     </table>
     <h1>Cr</h1>
@@ -203,9 +199,9 @@
         </td>
         </tr>
         <tr>
-        <td width="200"><img src="Images/1987 Topps Autos/193 Craig.jpeg" width=200> </td>
-        <td width="200"><img src="Images/1987 Topps Autos/589 Crawford.jpeg" width="200"> </td>
-        <td width="200"><img src="Images/1987 Topps Autos/670 Cruz.jpeg" width="200"> </td>
+        <td width="300"><img src="Images/1987 Topps Autos/193 Craig.jpeg" width="300"> </td>
+        <td width="300"><img src="Images/1987 Topps Autos/589 Crawford.jpeg" width="300"> </td>
+        <td width="300"><img src="Images/1987 Topps Autos/670 Cruz.jpeg" width="300"> </td>
         </tr>
     </table>
 </body>
