--- a/Baseball/Baseball_M.htm
+++ b/Baseball/Baseball_M.htm
@@ -42,14 +42,14 @@
     </td>
 </tr>
 <tr>
-    <td width="200">
-        <img width=200 src="Images/1987 Topps Autos/348 Martinez.jpeg">
+    <td width="300">
+        <img width="300" src="Images/1987 Topps Autos/348 Martinez.jpeg">
     </td>
-    <td width="200">
-        <img width=200 src="Images/1987 Topps Autos/512 Magadan.jpeg">
+    <td width="300">
+        <img width="300" src="Images/1987 Topps Autos/512 Magadan.jpeg">
     </td>
-    <td width="200">
-        <img width=200 src="Images/1987 Topps Autos/526 Mason.jpeg">
+    <td width="300">
+        <img width="300" src="Images/1987 Topps Autos/526 Mason.jpeg">
     </td>
 </tr>
 <tr>
@@ -70,14 +70,14 @@
     </td>
 </tr>
 <tr>
-    <td width="200">
-        <img width=200 src="Images/1987 Topps Autos/567 Mathews.jpeg">
+    <td width="300">
+        <img width="300" src="Images/1987 Topps Autos/567 Mathews.jpeg">
     </td>
-    <td width="200">
-        <img width=200 src="Images/1987 Topps Autos/664 Marshall.jpeg">
+    <td width="300">
+        <img width="300" src="Images/1987 Topps Autos/664 Marshall.jpeg">
     </td>
-    <td width="200">
-        <img width=200 src="Images/1987 Topps Autos/706 Manning.jpeg">
+    <td width="300">
+        <img width="300" src="Images/1987 Topps Autos/706 Manning.jpeg">
     </td>
     </tr>
     <tr>
@@ -93,11 +93,11 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/728 Martinez.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/728 Martinez.jpeg">
         </td>
         <td>
-            <img width="200" src="Images/MLB/Jason Marquis.jpeg">
+            <img width="300" src="Images/MLB/Jason Marquis.jpeg">
         </td>
 </table>
 <h1 id="Mc">Mc</h1>
@@ -120,14 +120,14 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/095 McDowell.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/095 McDowell.jpeg">
         </td>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/185 McDowell.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/185 McDowell.jpeg">
         </td>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/194 McCaskill.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/194 McCaskill.jpeg">
         </td>
     </tr>
     <tr>
@@ -148,14 +148,14 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/461 McMurtry.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/461 McMurtry.jpeg">
         </td>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/708 McGregor.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/708 McGregor.jpeg">
         </td>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/742 McGaffigan.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/742 McGaffigan.jpeg">
         </td>
         </tr>
     <tr>
@@ -167,7 +167,7 @@
     </tr>
     <tr>
         <td>
-            <img width="200" src="Images/MLB/Bo McLaughlin.jpeg">
+            <img width="300" src="Images/MLB/Bo McLaughlin.jpeg">
         </td>
     </tr>
     </table>
@@ -191,14 +191,14 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/062 Meacham.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/062 Meacham.jpeg">
         </td>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/514 Mercado.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/514 Mercado.jpeg">
         </td>
         <td>
-            <img width="200" src="Images/MLB/Dave Meads.jpeg">
+            <img width="300" src="Images/MLB/Dave Meads.jpeg">
         </td>
  
     </tr>
@@ -225,14 +225,14 @@
             </td>
         </tr>
         <tr>
-            <td width="200">
-                <img width=200 src="Images/1987 Topps Autos/408 Mizerock.jpeg">
+            <td width="300">
+                <img width="300" src="Images/1987 Topps Autos/408 Mizerock.jpeg">
             </td>
-            <td width="200">
-                <img width=200 src="Images/1987 Topps Autos/653 Mitchell.jpeg">
+            <td width="300">
+                <img width="300" src="Images/1987 Topps Autos/653 Mitchell.jpeg">
             </td>
-            <td width="200">
-                <img width="200" src="Images/1987 Topps Traded/John Mitchell.jpeg">
+            <td width="300">
+                <img width="300" src="Images/1987 Topps Traded/John Mitchell.jpeg">
             </td>
         </tr>
         <tr>
@@ -254,13 +254,13 @@
         </tr>
         <tr>
             <td>
-                <img width="200" src="Images/MLB/Quinton Miller.jpeg">
+                <img width="300" src="Images/MLB/Quinton Miller.jpeg">
             </td>
             <td>
-                <img width="200" src="Images/MLB/Blas Minor.jpeg">
+                <img width="300" src="Images/MLB/Blas Minor.jpeg">
             </td>
             <td>
-                <img width="200" src="Images/MLB/Dyar Miller.jpeg">
+                <img width="300" src="Images/MLB/Dyar Miller.jpeg">
             </td>
         </tr>
         </table>
@@ -284,14 +284,14 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/177 Moreland.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/177 Moreland.jpeg">
         </td>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/214 Moreno.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/214 Moreno.jpeg">
         </td>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/233 Morman.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/233 Morman.jpeg">
         </td>
     </tr>
     <tr>
@@ -303,8 +303,8 @@
    
     </tr>
     <tr>
-        <td width="200">
-            <img width=200 src="Images/1987 Topps Autos/546 Morgan.jpeg">
+        <td width="300">
+            <img width="300" src="Images/1987 Topps Autos/546 Morgan.jpeg">
         </td>
 
         </tr>
@@ -325,11 +325,11 @@
 
         </tr>
         <tr>
-            <td width="200">
-                <img width="200" src="Images/1987 Topps Autos/082 Murphy.jpeg">
+            <td width="300">
+                <img width="300" src="Images/1987 Topps Autos/082 Murphy.jpeg">
             </td>
-            <td width="200">
-                <img width=200 src="Images/1987 Topps Autos/490 Murphy.jpeg">
+            <td width="300">
+                <img width="300" src="Images/1987 Topps Autos/490 Murphy.jpeg">
             </td>
 
             </tr>
