--- a/Baseball/Baseball_A.htm
+++ b/Baseball/Baseball_A.htm
@@ -31,7 +31,7 @@
     </tr>
     <tr>
         <td>
-            <img width=200 src="Images/1987 Topps Autos/766 Aase.jpeg" alt="Don Aase"> 
+            <img width="300" src="Images/1987 Topps Autos/766 Aase.jpeg" alt="Don Aase"> 
         </td>
     </tr>
 </table>
@@ -102,8 +102,8 @@
         <br> 1973 Topps
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/MLB/Jack Aker.jpeg" width=200> 
+        <td width="300">
+            <img src="Images/MLB/Jack Aker.jpeg" width="300"> 
         </td>
     </tr>
     </table>
@@ -117,8 +117,8 @@
 </td>
 </tr>
 <tr>
-    <td width="200">
-        <img src="Images/1987 Topps Autos/447 Almon.jpeg" width=200> 
+    <td width="300">
+        <img src="Images/1987 Topps Autos/447 Almon.jpeg" width="300"> 
     </td>
 </tr>
 </table>
@@ -140,9 +140,9 @@
     </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/073 Anderson.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/218 Anderson.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/631 Anderson.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/073 Anderson.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/218 Anderson.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/631 Anderson.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -163,9 +163,9 @@
         </td>
     </tr>
     <tr>
-        <td><img src="Images/1987 Topps Autos/594 Anderson.jpeg" width="200"></td>
-        <td><img src="Images/1987 Topps Autos/503 Andersen.jpeg" width="200"></td>
-        <td><img src="Images/1987 Topps Autos/775 Andujar.jpeg" width="200"></td>
+        <td><img src="Images/1987 Topps Autos/594 Anderson.jpeg" width="300"></td>
+        <td><img src="Images/1987 Topps Autos/503 Andersen.jpeg" width="300"></td>
+        <td><img src="Images/1987 Topps Autos/775 Andujar.jpeg" width="300"></td>
     </tr>
     </table>
 <h1 id="Ar">Ar</h1>
@@ -199,8 +199,8 @@
 
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/052 Atherton.jpeg" width=200> </td>
-    <td><img width="200" src="Images/Negro Leagues/Luke Atkinson.jpeg"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/052 Atherton.jpeg" width="300"> </td>
+    <td><img width="300" src="Images/Negro Leagues/Luke Atkinson.jpeg"> </td>
     </tr>
     
     </table>
