--- a/Baseball/Baseball_B.htm
+++ b/Baseball/Baseball_B.htm
@@ -40,9 +40,9 @@
   </td>
 </tr>
 <tr>
-<td width="200"><img src="Images/1987 Topps Autos/585 Bailes.jpeg" width=200> </td>
-<td width="200"><img src="Images/1987 Topps Autos/565 Baker.jpeg" width="200"> </td>
-<td width="200"><img src="Images/1987 Topps Autos/240 Balboni.jpeg" width="200"> </td>
+<td width="300"><img src="Images/1987 Topps Autos/585 Bailes.jpeg" width="300"> </td>
+<td width="300"><img src="Images/1987 Topps Autos/565 Baker.jpeg" width="300"> </td>
+<td width="300"><img src="Images/1987 Topps Autos/240 Balboni.jpeg" width="300"> </td>
 </tr>
 <tr>
     <td>
@@ -67,13 +67,13 @@
 </tr>
 <tr>
     <td>
-        <img src="Images/1987 Topps Autos/264 Balderson.jpeg" width="200">
+        <img src="Images/1987 Topps Autos/264 Balderson.jpeg" width="300">
     </td>
     <td>
-        <img src="Images/1987 Topps Autos/737 Bannister.jpeg" width="200">
+        <img src="Images/1987 Topps Autos/737 Bannister.jpeg" width="300">
     </td>
     <td>
-        <img src="Images/1987 Topps Autos/230 Baylor.jpeg" width="200">
+        <img src="Images/1987 Topps Autos/230 Baylor.jpeg" width="300">
     </td>
 </tr>
 <tr>
@@ -95,7 +95,7 @@
         <BR>PHOTO
     </td>
     <td>
-        <img width="200" src="Images/MLB/Roger Bailey.jpeg">
+        <img width="300" src="Images/MLB/Roger Bailey.jpeg">
     </td>
 </tr>
 </table>
@@ -119,9 +119,9 @@
       </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/582 Berenyi.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/541 Belliard.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/439 Best.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/582 Berenyi.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/541 Belliard.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/439 Best.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -143,13 +143,13 @@
     </tr>
     <tr>
         <td>
-            <img src="Images/1987 Topps Autos/186 Benedict.jpeg" width="200">
+            <img src="Images/1987 Topps Autos/186 Benedict.jpeg" width="300">
         </td>
         <td>
-            <img src="Images/1987 Topps Autos/117 Beattie.jpeg" width="200">
+            <img src="Images/1987 Topps Autos/117 Beattie.jpeg" width="300">
         </td>
         <td>
-            <img src="Images/1987 Topps Autos/114 Beane.jpeg" width="200">
+            <img src="Images/1987 Topps Autos/114 Beane.jpeg" width="300">
         </td>
     </tr>
     <tr>
@@ -167,10 +167,10 @@
     </tr>
     <tr>
         <td>
-            <img width="200" src="Images/Negro Leagues/Leffy Bell.jpeg">
+            <img width="300" src="Images/Negro Leagues/Leffy Bell.jpeg">
         </td>
         <td>
-            <img width="200" src="Images/MLB/Blaine Beatty.jpeg">
+            <img width="300" src="Images/MLB/Blaine Beatty.jpeg">
         </td>
     </tr>
     </table>
@@ -194,9 +194,9 @@
       </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/577 Bilardello.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/554 Biancalana.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/394 Bielecki.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/577 Bilardello.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/554 Biancalana.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/394 Bielecki.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -215,10 +215,10 @@
     </tr>
     <tr>
         <td>
-            <img src="Images/1987 Topps Autos/229 Birkbeck.jpeg" width="200">
+            <img src="Images/1987 Topps Autos/229 Birkbeck.jpeg" width="300">
         </td>
         <td>
-            <img width="200" src="Images/Negro Leagues/Dennis Biddle.jpeg"
+            <img width="300" src="Images/Negro Leagues/Dennis Biddle.jpeg"
         </td>
         <td>
            
@@ -240,12 +240,12 @@
         <br> 1987 Topps
         <br> Hall of Fame: 2011
     </td>
-    <td width="200">
+    <td width="300">
     </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/669 Black.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/025 Blyleven.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/669 Black.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/025 Blyleven.jpeg" width="300"> </td>
     </tr>
     </table>
 <h1>Bo</h1>
@@ -268,9 +268,9 @@
     </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/638 Bordi.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/058 Bosley.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/285 Boyd.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/638 Bordi.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/058 Bosley.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/285 Boyd.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td colspan="2" align="center">
@@ -287,9 +287,9 @@
         </td>
     </tr>
     <tr>
-        <td><img src="Images/1987 Topps Autos/150 Boggs.jpeg" width="200"></td>
-        <td><img src="Images/1987 Topps Autos/608 Boggs.jpeg" width="200"></td>
-        <td><img src="Images/1987 Topps Autos/166 Boone.jpeg" width="200"></td>
+        <td><img src="Images/1987 Topps Autos/150 Boggs.jpeg" width="300"></td>
+        <td><img src="Images/1987 Topps Autos/608 Boggs.jpeg" width="300"></td>
+        <td><img src="Images/1987 Topps Autos/166 Boone.jpeg" width="300"></td>
     </tr>
     <tr>
         <td>
@@ -310,9 +310,9 @@
         </td>
     </tr>
     <tr>
-        <td><img src="Images/1987 Topps Autos/428 Bochy.jpeg" width="200"></td>
-        <td><img src="Images/1987 Topps Autos/448 Bosio.jpeg" width="200"></td>
-        <td><img src="Images/1987 Topps Autos/455 Boddicker.jpeg" width="200"></td>
+        <td><img src="Images/1987 Topps Autos/428 Bochy.jpeg" width="300"></td>
+        <td><img src="Images/1987 Topps Autos/448 Bosio.jpeg" width="300"></td>
+        <td><img src="Images/1987 Topps Autos/455 Boddicker.jpeg" width="300"></td>
     </tr>
     <tr>
         <td>
@@ -323,7 +323,7 @@
         </td>
     </tr>
     <tr>
-        <td><img width="200" src="Images/1987 Topps Traded/Larry Bowa.jpeg"></td>
+        <td><img width="300" src="Images/1987 Topps Traded/Larry Bowa.jpeg"></td>
     </tr>
     </table>
 <h1>Br</h1>
@@ -348,9 +348,9 @@
     </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/026 Brock.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/035 Bream.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/125 Brenly.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/026 Brock.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/035 Bream.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/125 Brenly.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -372,13 +372,13 @@
     </tr>
     <tr>
         <td>
-            <img src="Images/1987 Topps Autos/180 Brown.jpeg" width="200">
+            <img src="Images/1987 Topps Autos/180 Brown.jpeg" width="300">
         </td>
         <td>
-            <img src="Images/1987 Topps Autos/341 Brown.jpeg" width="200">
+            <img src="Images/1987 Topps Autos/341 Brown.jpeg" width="300">
         </td>
         <td>
-            <img src="Images/1987 Topps Autos/387 Bryden.jpeg" width="200">
+            <img src="Images/1987 Topps Autos/387 Bryden.jpeg" width="300">
         </td>
     </tr>
     <tr>
@@ -400,13 +400,13 @@
     </tr>
     <tr>
         <td>
-            <img src="Images/1987 Topps Autos/525 Bradley.jpeg" width="200">
+            <img src="Images/1987 Topps Autos/525 Bradley.jpeg" width="300">
         </td>
         <td>
-            <img src="Images/1987 Topps Autos/776 Brunansky.jpeg" width="200">
+            <img src="Images/1987 Topps Autos/776 Brunansky.jpeg" width="300">
         </td>
         <td>
-            <img width="200" src="Images/Negro Leagues/Clifford Brown.jpeg">
+            <img width="300" src="Images/Negro Leagues/Clifford Brown.jpeg">
         </td>
     </tr>
     </table>
@@ -430,9 +430,9 @@
     </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/358 Butera.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/176 Buechele.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/364 Bush.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/358 Butera.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/176 Buechele.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/364 Bush.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -453,9 +453,9 @@
         </td>
     </tr>
     <tr>
-        <td width="200"><img src="Images/1987 Topps Autos/624 Burke.jpeg" width=200></td>
-        <td width="200"><img src="Images/1987 Topps Autos/723 Butler.jpeg" width=200></td>
-        <td width="200"><img src="Images/1987 Topps Autos/764 Buckner.jpeg" width=200></td>
+        <td width="300"><img src="Images/1987 Topps Autos/624 Burke.jpeg" width="300"></td>
+        <td width="300"><img src="Images/1987 Topps Autos/723 Butler.jpeg" width="300"></td>
+        <td width="300"><img src="Images/1987 Topps Autos/764 Buckner.jpeg" width="300"></td>
     </tr>
     </table>
 
