--- a/Baseball/Baseball_D.htm
+++ b/Baseball/Baseball_D.htm
@@ -43,9 +43,9 @@
 </td>
 </tr>
 <tr>
-<td width="200"><img src="Images/1987 Topps Autos/054 Dawley.jpeg" width=200> </td>
-<td width="200"><img src="Images/1987 Topps Autos/059 Dayley.jpeg" width="200"> </td>
-<td width="200"><img src="Images/1987 Topps Autos/075 Darling.jpeg" width="200"> </td>
+<td width="300"><img src="Images/1987 Topps Autos/054 Dawley.jpeg" width="300"> </td>
+<td width="300"><img src="Images/1987 Topps Autos/059 Dayley.jpeg" width="300"> </td>
+<td width="300"><img src="Images/1987 Topps Autos/075 Darling.jpeg" width="300"> </td>
 </tr>
 <tr>
     <td>
@@ -66,13 +66,13 @@
 </tr>
 <tr>
     <td>
-        <img src="Images/1987 Topps Autos/083 Davis.jpeg" width="200">
+        <img src="Images/1987 Topps Autos/083 Davis.jpeg" width="300">
     </td>
     <td>
-        <img src="Images/1987 Topps Autos/157 Darwin.jpeg" width="200">
+        <img src="Images/1987 Topps Autos/157 Darwin.jpeg" width="300">
     </td>
     <td>
-        <img src="Images/1987 Topps Autos/270 Davis.jpeg" width="200">
+        <img src="Images/1987 Topps Autos/270 Davis.jpeg" width="300">
     </td>
 </tr>
 <tr>
@@ -91,13 +91,13 @@
 </tr>
 <tr>
     <td>
-        <img src="images/1987 Topps Autos/349 Davis.jpeg" width="200">
+        <img src="images/1987 Topps Autos/349 Davis.jpeg" width="300">
     </td>
     <td>
-        <img src="images/1987 Topps Traded/Storm Davis.jpeg" width="200">
+        <img src="images/1987 Topps Traded/Storm Davis.jpeg" width="300">
     </td>
     <td>
-        <img src="images/1987 Topps Autos/345 Dawson.jpeg" width="200">
+        <img src="images/1987 Topps Autos/345 Dawson.jpeg" width="300">
     </td>
 </tr>
 <tr>
@@ -109,7 +109,7 @@
 </tr>
 <tr>
     <td>
-        <img src="images/1987 Topps Autos/369 Dayett.jpeg" width="200">
+        <img src="images/1987 Topps Autos/369 Dayett.jpeg" width="300">
     </td>
 </tr>
 </table>
@@ -128,9 +128,9 @@
         </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/002 Deshaies RB.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/167 DeShaies.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/022 DeCinces.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/002 Deshaies RB.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/167 DeShaies.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/022 DeCinces.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -141,7 +141,7 @@
     </tr>
     <tr>
         <td>
-            <img width="200" src="Images/MLB/Jose De Leon.jpeg">
+            <img width="300" src="Images/MLB/Jose De Leon.jpeg">
         </td>
     </tr>
     </table>
@@ -165,9 +165,9 @@
     </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/651 Distefano.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/662 DiPino.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/528 Dixon.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/651 Distefano.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/662 DiPino.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/528 Dixon.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -178,7 +178,7 @@
     </tr>
     <tr>
         <td>
-            <img width="200" src="Images/MLB/RA Dickey.jpeg">
+            <img width="300" src="Images/MLB/RA Dickey.jpeg">
         </td>
     </tr>
     </table>
@@ -193,7 +193,7 @@
 
         </tr>
         <tr>
-        <td width="200"><img src="Images/1987 Topps Autos/720 Dotson.jpeg" width=200> </td>
+        <td width="300"><img src="Images/1987 Topps Autos/720 Dotson.jpeg" width="300"> </td>
 
         </tr>
         </table>
@@ -220,9 +220,9 @@
 
     </tr>
     <tr>
-     <td width="200"><img src="Images/1987 Topps Autos/470 Dravecky.jpeg" width="200"> </td>
-     <td width="200"><img src="Images/MLB/Dick Drago.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/283 drabek.jpeg" width=200> </td>
+     <td width="300"><img src="Images/1987 Topps Autos/470 Dravecky.jpeg" width="300"> </td>
+     <td width="300"><img src="Images/MLB/Dick Drago.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/283 drabek.jpeg" width="300"> </td>
 
     </tr>
     <tr>
@@ -233,9 +233,9 @@
         </td>
     </tr>
     <tr>
-        <td><img width="200" src="Images/MLB/Doug Drabek 1.jpeg"></td>
-        <td><img width="200" src="Images/MLB/Doug Drabek 2.jpeg"></td>
-        <td><img width="200" src="Images/MLB/Doug Drabek.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Doug Drabek 1.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Doug Drabek 2.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Doug Drabek.jpeg"></td>
     </tr>
     <tr>
         <td>
@@ -246,7 +246,7 @@
     </tr>
     <tr>
         <td>
-            <img width="200" src="Images/MLB/Kirk Dressendorfer.jpeg">
+            <img width="300" src="Images/MLB/Kirk Dressendorfer.jpeg">
         </td>
     </tr>
     </table>
@@ -273,9 +273,9 @@
     </td>
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/081 Dunlop.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/199 Duncan.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/346 Dunston.jpeg" width="200"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/081 Dunlop.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/199 Duncan.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/346 Dunston.jpeg" width="300"> </td>
     </tr>
     </table>
 <h1 id="Dw">Dw</h1>
@@ -289,7 +289,7 @@
 
     </tr>
     <tr>
-    <td width="200"><img src="Images/1987 Topps Autos/246 Dwyer.jpeg" width=200> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/246 Dwyer.jpeg" width="300"> </td>
     </tr>
     </table>
 </body>
