--- a/Baseball/Baseball_E.htm
+++ b/Baseball/Baseball_E.htm
@@ -34,7 +34,7 @@
 
 </tr>
 <tr>
-<td width="200"><img src="Images/1987 Topps Autos/371 Eichorn.jpeg" width=200> </td>
+<td width="300"><img src="Images/1987 Topps Autos/371 Eichorn.jpeg" width="300"> </td>
 </tr>
 </table>
 <h1 id="Er">Er</h1>
@@ -49,7 +49,7 @@
 
 </tr>
 <tr>
-<td width="200"><img src="Images/MLB/Carl Erskine.jpeg" width=200> </td>
+<td width="300"><img src="Images/MLB/Carl Erskine.jpeg" width="300"> </td>
 </tr>
 </table>
 <h1 id="Ev">Ev</h1>
@@ -63,8 +63,8 @@
 
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/265 Evans.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/265 Evans.jpeg" width="300">
         </td>
 
     </tr>
