--- a/Baseball/Baseball_F.htm
+++ b/Baseball/Baseball_F.htm
@@ -33,8 +33,8 @@
     </td>
 </tr>
 <tr>
-    <td width="200">
-        <img src="Images/1987 Topps Autos/473 Farr.jpeg" width="200">
+    <td width="300">
+        <img src="Images/1987 Topps Autos/473 Farr.jpeg" width="300">
     </td>
 </tr>
 </table>
@@ -49,8 +49,8 @@
 
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/443 Felske.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/443 Felske.jpeg" width="300">
     </tr>
     </table>
 <h1 id="Fi">Fi</h1>
@@ -73,14 +73,14 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/212 Fitgerald.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/212 Fitgerald.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/357 Fireovid.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/357 Fireovid.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/434 Fischlin.jpeg" width=200>
+        <td width="300">
+            <img src="Images/1987 Topps Autos/434 Fischlin.jpeg" width="300">
         </td>
     </tr>
     </table>
@@ -101,11 +101,11 @@
 
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/462 Fletcher.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/462 Fletcher.jpeg" width="300">
         </td>
         <td>
-            <img src="Images/MLB/Huck Flener.jpeg" width="200">
+            <img src="Images/MLB/Huck Flener.jpeg" width="300">
         </td>
     </tr>
     </table>
@@ -130,14 +130,14 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/207 Frazier.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/207 Frazier.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/785 Francona.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/785 Francona.jpeg" width="300">
         </td>
         <td>
-            <img width="200" src="Images/MLB/Woodie Fryman.jpeg">
+            <img width="300" src="Images/MLB/Woodie Fryman.jpeg">
         </td>
 
     </tr>
@@ -150,7 +150,7 @@
     </tr>
     <tr>
         <td colspan="3" align="center">
-        <img width="200" src="Images/MLB/Tony Fossas.jpeg">
+        <img width="300" src="Images/MLB/Tony Fossas.jpeg">
         </td>
     </tr>
     </table>
