--- a/Baseball/Baseball_H.htm
+++ b/Baseball/Baseball_H.htm
@@ -44,14 +44,14 @@
     </td>
 </tr>
 <tr>
-    <td width="200">
-        <img src="Images/1987 Topps Autos/044 Harris.jpeg" width="200">
+    <td width="300">
+        <img src="Images/1987 Topps Autos/044 Harris.jpeg" width="300">
     </td>
-    <td width="200">
-        <img src="Images/1987 Topps Autos/152 Harrah.jpeg" width="200">
+    <td width="300">
+        <img src="Images/1987 Topps Autos/152 Harrah.jpeg" width="300">
     </td>
-    <td width="200">
-        <img src="Images/1987 Topps Autos/266 Hamilton.jpeg" width="200">
+    <td width="300">
+        <img src="Images/1987 Topps Autos/266 Hamilton.jpeg" width="300">
     </td>
 </tr>
 <tr>
@@ -72,14 +72,14 @@
     </td>
 </tr>
 <tr>
-    <td width="200">
-        <img src="Images/1987 Topps Autos/666 Hayes.jpeg" width="200">
+    <td width="300">
+        <img src="Images/1987 Topps Autos/666 Hayes.jpeg" width="300">
     </td>
-    <td width="200">
-        <img src="Images/1987 Topps Autos/781 Hammaker.jpeg" width="200">
+    <td width="300">
+        <img src="Images/1987 Topps Autos/781 Hammaker.jpeg" width="300">
     </td>
     <td>
-        <img width="200" src="Images/MLB/Ed Halicki.jpeg">
+        <img width="300" src="Images/MLB/Ed Halicki.jpeg">
     </td>
     </tr>
 </table>
@@ -106,14 +106,14 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/189 Hesketh.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/189 Hesketh.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/243 Herzog.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/243 Herzog.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/433 Hearn.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/433 Hearn.jpeg" width="300">
         </td>
     </tr>
     <tr>
@@ -129,11 +129,11 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/721 Herr.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/721 Herr.jpeg" width="300">
         </td>
         <td>
-            <img width="200" src="Images/MLB/Xavier Hernandez.jpeg">
+            <img width="300" src="Images/MLB/Xavier Hernandez.jpeg">
         </td>
         </tr>
     </table>
@@ -160,14 +160,14 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/070 Hough.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/070 Hough.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/374 Hoffman.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/374 Hoffman.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/391 Howell.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/391 Howell.jpeg" width="300">
         </td>
     </tr>
     <tr>
@@ -184,11 +184,11 @@
 
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/422 Howell.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/422 Howell.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/542 Horton.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/542 Horton.jpeg" width="300">
     
         </td>
 
@@ -206,8 +206,8 @@
  
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/306 Hriniak.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/306 Hriniak.jpeg" width="300">
         </td>
 
     </tr>
@@ -233,14 +233,14 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/187 Huismann.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/187 Huismann.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/191 Hudson.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/191 Hudson.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/317 Hurdle.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/317 Hurdle.jpeg" width="300">
         </td>
     </tr>
     <tr>
@@ -258,13 +258,13 @@
         </td>
     </tr>
     <tr>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/719 Hume.jpeg" width="200">
+        <td width="300">
+            <img src="Images/1987 Topps Autos/719 Hume.jpeg" width="300">
         </td>
-        <td width="200">
-            <img src="Images/1987 Topps Autos/745 Hubbard.jpeg" width=200>
+        <td width="300">
+            <img src="Images/1987 Topps Autos/745 Hubbard.jpeg" width="300">
         </td>
-        <td width="200">
+        <td width="300">
     \
         </td>
         </tr>
