--- a/Baseball/Baseball_L.htm
+++ b/Baseball/Baseball_L.htm
@@ -133,6 +133,12 @@
             <br>1953-1967
             <br>2002 Upper Deck<br> World Series Heroes
         </td>
+        <td>
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Joe Landrum
+            <br>1950 - 1952
+            <br>Custom Cut
+        </td>
     </tr>
     <tr>
         <td>
@@ -140,6 +146,9 @@
         </td>
         <td>
             <img width="300" src="Images/MLB/Don Larson.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Joe Landrum.jpeg">
         </td>
     </tr>
 </table>
