--- a/Baseball/Baseball_T.htm
+++ b/Baseball/Baseball_T.htm
@@ -21,7 +21,7 @@
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
  <pre>
-    <a href="#Ta">Ta</a> <a href="#Te">Te</a> <a href="#Th">Th</a> <a href="#Tr">Tr</a> <a href="#Tu">Tu</a>
+    <a href="#Ta">Ta</a> <a href="#Te">Te</a> <a href="#Th">Th</a> <a href="#Ti">Ti</a> <a href="#Tr">Tr</a> <a href="#Tu">Tu</a>
  </pre>
  <h1 id="Ta">Ta</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -152,6 +152,21 @@
         </td>
         </tr>
     </table>
+<h1 id="Ti">Ti</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            Mike Timlin
+            <br>1991 - 2008
+            <br>1993 Topps
+        </td>
+    </tr>
+    <tr>
+        <td width="300">
+            <img width="300" src="Images/MLB/Mike Timlin.jpeg">
+        </td>
+    </tr>
+</table>
 <h1 id="Tr">Tr</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
