--- a/Baseball/Baseball_C.htm
+++ b/Baseball/Baseball_C.htm
@@ -127,11 +127,16 @@
         <br>1977-1991
         <br>1987 Topps
     </td>
-
+    <td>
+        Trevor Clifton
+        <br>Minor Leaguer
+        <br>2017 Bowman Scouts Top 100
+    </td>
     </tr>
     <tr>
     <td width="300"><img src="Images/1987 Topps Autos/016 Clements.jpeg" width="300"> </td>
     <td width="300"><img src="Images/1987 Topps Autos/122 Clancy.jpeg" width="300"> </td>
+    <td><img src="Images/MLB/Trevor Clifton.jpeg" width="300"> </td>
 
     </tr>
 </table>
