--- a/Baseball/Baseball_D.htm
+++ b/Baseball/Baseball_D.htm
@@ -128,8 +128,8 @@
         </td>
     </tr>
     <tr>
-    <td width="300"><img src="Images/1987 Topps Autos/002 Deshaies RB.jpeg" width="300"> </td>
-    <td width="300"><img src="Images/1987 Topps Autos/167 DeShaies.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/1987 Topps Autos/002 Deshaies RB.jpeg" width="300">
+ </td><td><img src="Images/1987 Topps Autos/167 DeShaies.jpeg" width="300"> </td>
     <td width="300"><img src="Images/1987 Topps Autos/022 DeCinces.jpeg" width="300"> </td>
     </tr>
     <tr>
@@ -138,10 +138,18 @@
             <br>2016 - 2023
             <br>2017 Donruss The Rookies
         </td>
+        <td>
+            Mark Dewey
+            <br>1990 - 1996
+            <br>1991 Score
+        </td>
     </tr>
     <tr>
         <td>
             <img width="300" src="Images/MLB/Jose De Leon.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Mark Dewey.jpeg">
         </td>
     </tr>
     </table>
