--- a/Baseball/Baseball_K.htm
+++ b/Baseball/Baseball_K.htm
@@ -31,10 +31,18 @@
         <br>1986 - 1997
         <br>1987 Topps
     </td>
+    <td>
+        Steve Karsay
+        <br>1993 - 2006
+        <br>1991 Upper Deck 
+    </td>
 </tr>
 <tr>
     <td width="300">
         <img src="Images/1987 Topps Autos/491 Karkovice.jpeg" width="300">
+    </td>
+    <td>
+        <img src="Images/MLB/Steve Karsay.jpeg" width="300">
     </td>
 
 </tr>
