--- a/Baseball/Baseball_P.htm
+++ b/Baseball/Baseball_P.htm
@@ -57,6 +57,9 @@
         <br>1987 Topps Future Stars
     </td>
     <td>
+        Troy Patton
+        <br>2007 - 2014
+        <br>2010 Upper Deck Signature Sensations
     </td>
     <td>
     </td>
@@ -66,6 +69,7 @@
         <img width="300" src="Images/1987 Topps Autos/634 Palmeiro.jpeg">
     </td>
     <td width="300">
+        <img width="300" src="Images/MLB/Troy Patton.jpeg">
 
     </td>
     <td width="300">
