--- a/Baseball/Baseball_R.htm
+++ b/Baseball/Baseball_R.htm
@@ -119,6 +119,11 @@
             <br>Hall of Fame: 2009
             <br>1987 Topps | 1987 Topps All-Star
         </td>
+        <td>
+            Dustin Richardson
+            <br>2009 - 2010
+            <br>2010 Topps Allen & Ginter
+        </td>
     </tr>
     <tr>
         <td width="300">
@@ -126,6 +131,9 @@
         </td>
         <td width="300">
             <img width="300" src="Images/1987 Topps Autos/610 Rice.jpeg"> 
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Dustin Richardson.jpeg">
         </td>
 
     </tr>
@@ -230,10 +238,18 @@
                 <br>1988 - 1991
                 <br>1990 Topps
             </td>
+            <td>
+                Dave Rozema
+                <br>1977 - 1986
+                <br>1982 Topps
+            </td>
         </tr>
         <tr>
             <td>
                 <img width="300" src="Images/MLB/Steve Rosenberg.jpeg">
+            </td>
+            <td>
+                <img width="300" src="Images/MLB/Dave Rozema.jpeg">
             </td>
         </tr>
     </table>
