--- a/Baseball/Baseball_V.htm
+++ b/Baseball/Baseball_V.htm
@@ -99,10 +99,18 @@
             <br>1982 - 1996
             <br>1987 Topps
         </td>
+        <td>
+            Thyago Vieira
+            <br>2017 - 
+            <br>2018 Donruss Signature Series
+        </td>
     </tr>
     <tr>
         <td width="300">
             <img width="300" src="Images/1987 Topps Autos/310 Viola.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Thyago Vieira.jpeg">
         </td>
     </tr>
 </table>
