--- a/Baseball/Baseball_W.htm
+++ b/Baseball/Baseball_W.htm
@@ -106,6 +106,18 @@
             <img width="300" src="Images/1987 Topps Autos/592 Welsh.jpeg">
         </td>
     </tr>
+    <tr>
+        <td> <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Mike Wegener
+            <br>1969 - 1970
+            <br>1969 Topps
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="300" src="Images/MLB/Mike Wegener.jpeg">
+        </td>
+    </tr>
     </table>
 <h1 id="Wh">Wh</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
