--- a/Baseball/Baseball_B.htm
+++ b/Baseball/Baseball_B.htm
@@ -87,6 +87,11 @@
         <br>1995 - 1997
         <br>1993 Stadium Club Colorado Rockies
     </td>
+    <td>
+        Jeff Ballard
+        <br>1987 - 1994
+        <br>1991 Bowman
+    </td>
 </tr>
 <tr>
     <td>
@@ -96,6 +101,21 @@
     </td>
     <td>
         <img width="300" src="Images/MLB/Roger Bailey.jpeg">
+    </td>
+    <td>
+        <img width="300" src="Images/MLB/Ballard Jeff.jpeg">
+    </td>
+</tr>
+<tr>
+    <td>
+        Daniel Bard
+        <br>2009 - 2023
+        <br>2013 Topps Update
+    </td>
+</tr>
+<tr>
+    <td>
+        <img width="300" src="Images/MLB/Bard Daniel.jpeg">
     </td>
 </tr>
 </table>
@@ -164,6 +184,11 @@
             <br>1989-1991
             <br>1990 Bowamn
         </td>
+        <td>
+            Stan Belinda
+            <br>1989 - 2000
+            <br>1991 Upper Deck
+        </td>
     </tr>
     <tr>
         <td>
@@ -171,6 +196,20 @@
         </td>
         <td>
             <img width="300" src="Images/MLB/Blaine Beatty.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Belinda Stan.jpeg">
+        </td>
+    </tr>
+    <tr>
+        <td>Gary Bell
+        <br>1958 - 1969
+        <br>1969 Topps
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img src="Images/MLB/Bell Gus.jpeg" width="300">
         </td>
     </tr>
     </table>
@@ -182,21 +221,17 @@
         <br> 1983-1992
         <br> 1987 Topps
     </td>
-    <td>
-        Buddy Biancalana
-        <br> 1982-1987
-        <br> 1987 Topps
-    </td>
-      <td>
+
+      <td colspan="2" align="center">
         Mike Bielecki
         <br> 1984-1997
-        <br> 1987 Topps
+        <br> 1987 Topps | 1991 Upper Deck
       </td>
     </tr>
     <tr>
     <td width="300"><img src="Images/1987 Topps Autos/577 Bilardello.jpeg" width="300"> </td>
-    <td width="300"><img src="Images/1987 Topps Autos/554 Biancalana.jpeg" width="300"> </td>
     <td width="300"><img src="Images/1987 Topps Autos/394 Bielecki.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/mlb/Bielecki Mike.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -210,7 +245,9 @@
              <br>1953
         </td>
         <td>
-           
+            Buddy Biancalana
+            <br> 1982-1987
+            <br> 1987 Topps
         </td>
     </tr>
     <tr>
@@ -218,10 +255,23 @@
             <img src="Images/1987 Topps Autos/229 Birkbeck.jpeg" width="300">
         </td>
         <td>
-            <img width="300" src="Images/Negro Leagues/Dennis Biddle.jpeg"
+            <img width="300" src="Images/Negro Leagues/Dennis Biddle.jpeg">
         </td>
+        <td width="300">
+            <img src="Images/1987 Topps Autos/554 Biancalana.jpeg" width="300"> 
+        </td>
+
+    </tr>
+    <tr>
         <td>
-           
+            Tim Birtsas
+            <br>1985 - 1990
+            <br>1989 Topps
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img src="Images/MLB/Birtsas Tim.jpeg" width="300">
         </td>
     </tr>
     </table>
@@ -241,11 +291,15 @@
         <br> Hall of Fame: 2011
     </td>
     <td width="300">
+        Matt Blank
+        <br>2000-2001
+        <br>1999 Just Minor League
     </td>
     </tr>
     <tr>
     <td width="300"><img src="Images/1987 Topps Autos/669 Black.jpeg" width="300"> </td>
     <td width="300"><img src="Images/1987 Topps Autos/025 Blyleven.jpeg" width="300"> </td>
+    <td width="300"><img width="300" src="Images/MLB/Blank Matt.jpeg"></td>
     </tr>
     </table>
 <h1>Bo</h1>
@@ -321,9 +375,67 @@
             <br>Manager: 1987 - 2004
             <br>1987 Topps Traded
         </td>
+        <td colspan="2" align="center">
+            Ricky Bones
+            <br>1991 - 2001
+            <br>1992 Stadium Club
+        </td>
+
     </tr>
     <tr>
         <td><img width="300" src="Images/1987 Topps Traded/Larry Bowa.jpeg"></td>
+        <td colspan="2"><img width="600" src="Images/MLB/Bones Ricky.jpeg"></td>
+    </tr>
+    <tr>
+        <td>
+            Danny Boone 
+            <br>1981-1982, 1990
+            <br>
+        </td>
+        <td>
+            Dave Borkowski 
+            <br>1999 - 2008
+            <br>2007 Upper Deck
+        </td>
+        <td>
+            Shawn Boskie
+            <br>1990 - 1998
+            <br>1991 Topps
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Boone Danny.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Borkowski Dave.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Boskie Shawn.jpeg"></td>
+    </tr>
+    <tr>
+        <td colspan="2" align="center">
+            Brad Boxberger
+            <br>2012-2023
+            <br>2019 Topps
+        </td>
+        <td>
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Cloyd Boyer 
+            <br>1949 - 1955
+            <br>Custom Card
+        </td>  
+
+    </tr>
+    <tr>
+        <td colspan="2"><img width="600" src="Images/MLB/Boxberger Brad.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Boyer Cloyd.jpeg"></td>
+    </tr>
+    <tr>
+        <td>
+            Lisalverto Bonilla
+            <br>MLB: 2014, 1017
+            <br>CPBL:2020-2021
+            <br>2013 Topps Pro Debut
+        </td> 
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Bonilla Lisalverto.jpeg"></td>
     </tr>
     </table>
 <h1>Br</h1>
@@ -409,6 +521,16 @@
             <img width="300" src="Images/Negro Leagues/Clifford Brown.jpeg">
         </td>
     </tr>
+    <tr>
+        <td>
+            Darrell Brandon
+            <br>1966 - 1973
+            <br>1969 Topps
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Brandon Darrell.jpeg"></td>
+    </tr>
     </table>
 <h1>Bu</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -456,6 +578,16 @@
         <td width="300"><img src="Images/1987 Topps Autos/624 Burke.jpeg" width="300"></td>
         <td width="300"><img src="Images/1987 Topps Autos/723 Butler.jpeg" width="300"></td>
         <td width="300"><img src="Images/1987 Topps Autos/764 Buckner.jpeg" width="300"></td>
+    </tr>
+    <tr>
+        <td>
+            Jim Bullinger
+            <br>1992 - 1998
+            <br>1997 Collectors Choice
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Bullinger Jim.jpeg"></td>
     </tr>
     </table>
 
