--- a/Baseball/Baseball_A.htm
+++ b/Baseball/Baseball_A.htm
@@ -115,10 +115,18 @@
 	<br> 1974-1988
     <br> 1987 Topps
 </td>
+<td>
+    Jay Aldrich
+    <br>1987 - 1990
+    <br>1988 Fleer
+</td>
 </tr>
 <tr>
     <td width="300">
         <img src="Images/1987 Topps Autos/447 Almon.jpeg" width="300"> 
+    </td>
+    <td>
+        <img src="Images/MLB/Aldrich Jay.jpeg" width="300">
     </td>
 </tr>
 </table>
@@ -166,6 +174,18 @@
         <td><img src="Images/1987 Topps Autos/594 Anderson.jpeg" width="300"></td>
         <td><img src="Images/1987 Topps Autos/503 Andersen.jpeg" width="300"></td>
         <td><img src="Images/1987 Topps Autos/775 Andujar.jpeg" width="300"></td>
+    </tr>
+    <tr>
+        <td>
+            Chase Anderson
+            <br>2014 - 
+            <br>2018 Topps
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="300" src="Images/MLB/Anderson Chase.jpeg">
+        </td>
     </tr>
     </table>
 <h1 id="Ar">Ar</h1>
