--- a/Baseball/Baseball_A.htm
+++ b/Baseball/Baseball_A.htm
@@ -38,59 +38,80 @@
 <h1 id="Ad">Ad</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
-<td>
+    <td colspan="2">
 	Bob Adams (born 1952)
 	<br>1977
     <br>Custom
 </td>
-<td>
+<td colspan="2">
     Glenn Adams
     <br>1975 - 1982
     <br>Custom
 </td>
-<td>
-    Mike Adams (born 1948)
-    <br>1972 - 1978
-    <br>Custom
-</td>
+
 </tr>
 <tr>
-<td width="300">
-    <img width="300" src="Images/Customs/Bob Adams.jpeg"> </td>
-<td width="300"> 
-    <img width="300" src="Images/Customs/Glenn Adams.jpeg"></td>
-<td width="300"> 
-    <img width="300" src="Images/Customs/Mike Adams.jpeg">
-</td>
+    <td colspan="2">
+    <img width="600" src="Images/Customs/Bob Adams.jpeg"> </td>
+    <td colspan="2">
+    <img width="600" src="Images/Customs/Glenn Adams.jpeg"></td>
+
 </tr>
 <tr>
-    <td>
+    <td colspan="2">
+        Mike Adams (born 1948)
+        <br>1972 - 1978
+        <br>Custom
+    </td>
+    <td colspan="2">
         <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
         Mike Adamson
         <br>1967 - 1969
         <br>Custom
     </td>
-    <td>
+</tr>
+<tr>
+    <td colspan="2">
+        <img width="600" src="Images/Customs/Mike Adams.jpeg">
+    </td>
+    <td colspan="2">
+        <img width="600" src="Images/Customs/Mike Adamson.jpeg">
+    </td>
+</tr>
+<tr>
+
+    <td colspan="2">
         Terry Adams
         <br>1995 - 2005
         <br>Custom
     </td>
-    <td>
+    <td colspan="2">
         Willie Adams (born 1972)
         <br>1996 - 1997
         <br>Custom
     </td>
 </tr>
 <tr>
-    <td>
-        <img width="300" src="Images/Customs/Mike Adamson.jpeg">
+
+    <td colspan="2">
+        <img width="600" src="Images/Customs/Terry Adams.jpeg">
     </td>
-    <td>
-        <img width="300" src="Images/Customs/Terry Adams.jpeg">
+    <td colspan="2">
+        <img width="600" src="Images/Customs/Willie Adams.jpeg">
     </td>
-    <td>
-        <img width="300" src="Images/Customs/Willie Adams.jpeg">
+</tr>
+<tr>
+    <td width="300">
+        Chance Adams
+        <br>2018-2020
+        <br>2019 Topps
     </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td><img width="300" src="Images/MLB/Chance Adam.jpeg"></td>
 </tr>
 </table>
 <h1 id="Ak">Ak</h1>
