--- a/Baseball/Baseball_C.htm
+++ b/Baseball/Baseball_C.htm
@@ -91,11 +91,15 @@
         <br>1973 - 1983
         <br>1984 Topps
     </td>
- 
+    <td>
+        <br>
+        <br>
+    </td>
     </tr>
     <tr>
     <td width="300"><img src="Images/1987 Topps Autos/777 Chambliss.jpeg" width="300"> </td>
     <td width="300"><img src="Images/MLB/Larry Christenson.jpeg" width="300"> </td>
+  
 
     </tr>
     </table>
@@ -173,13 +177,31 @@
         </td>
         <td>
             Jim Cobbin
-            <br>Indianapolis Clows
+            <br>Indianapolis Clowns
             <br>1950-1958 
+        </td>
+        <td>
+            Jharel Cotton
+            <br>2016 - 2022
+            <br>2018 Topps
         </td>
     </tr>
     <tr>
         <td width="300"><img src="Images/1987 Topps Autos/423 Cocanower.jpeg" width="300"></td>
         <td width="300"><img src="Images/Negro Leagues/Jim Cobbin.jpeg" width="300"></td>
+        <td><img width="300" src="Images/MLB/Cotton Jharel.jpeg"></td>
+    </tr>
+    <tr>
+        <td colspan="2">
+            Bartolo Colón
+            <br>1997 - 2018
+            <br>Custom
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2">
+            <img width="600" src="Images/MLB/Colon Bartolo.jpeg">
+        </td>
     </tr>
     </table>
     <h1>Cr</h1>
