--- a/Baseball/Baseball_D.htm
+++ b/Baseball/Baseball_D.htm
@@ -91,13 +91,13 @@
 </tr>
 <tr>
     <td>
-        <img src="images/1987 Topps Autos/349 Davis.jpeg" width="300">
+        <img src="Images/1987 Topps Autos/349 Davis.jpeg" width="300">
     </td>
     <td>
-        <img src="images/1987 Topps Traded/Storm Davis.jpeg" width="300">
+        <img src="Images/1987 Topps Traded/Storm Davis.jpeg" width="300">
     </td>
     <td>
-        <img src="images/1987 Topps Autos/345 Dawson.jpeg" width="300">
+        <img src="Images/1987 Topps Autos/345 Dawson.jpeg" width="300">
     </td>
 </tr>
 <tr>
@@ -106,10 +106,18 @@
         <br>1983-1987
         <br>1987 Topps
     </td>
+    <td>
+        Tim Davis
+        <br>1994-1997
+        <br>1994 Topps Future Star
+    </td>
 </tr>
 <tr>
     <td>
-        <img src="images/1987 Topps Autos/369 Dayett.jpeg" width="300">
+        <img src="Images/1987 Topps Autos/369 Dayett.jpeg" width="300">
+    </td>
+    <td>
+        <img width="300" src="Images/MLB/Davis Tim.jpeg">
     </td>
 </tr>
 </table>
@@ -183,10 +191,18 @@
             <br>2001 - 2017
             <br>2016 Topps Heritage
         </td>
+        <td>
+            Ron Diorio
+            <br>1973-1974
+            <br>1974 Topps
+        </td>
     </tr>
     <tr>
         <td>
             <img width="300" src="Images/MLB/RA Dickey.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Diorio Freisleben Riccelli Shanahan.jpeg">
         </td>
     </tr>
     </table>
@@ -251,10 +267,17 @@
             <br>1991
             <br>1992 Topps
         </td>
+        <td>Darren Dreifort
+            <br>1994 - 2004
+            <br>1999 Stadium Club
+        </td>
     </tr>
     <tr>
         <td>
             <img width="300" src="Images/MLB/Kirk Dressendorfer.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Dreifort Darren.jpeg">
         </td>
     </tr>
     </table>
