--- a/Baseball/Baseball_G.htm
+++ b/Baseball/Baseball_G.htm
@@ -63,6 +63,9 @@
         <br>1987 Topps
     </td>
     <td>
+        Joe Gatto
+        <br>Minor League
+        <br>2014 Bowman Draft
     </td>
 </tr>
 <tr>
@@ -72,7 +75,7 @@
     <td width="300">
         <img src="Images/1987 Topps Autos/710 Gaetti.jpeg" width="300">
     </td>
-    <td width="300">
+    <td width="300"><img src="Images/MLB/Gatto Joe.jpeg" width="300">
    
     </td>
 </tr>
@@ -158,12 +161,38 @@
             <br>Color Commentator: 1995 - 2022
             <br>1987 Topps
         </td>
+        <td>
+            Steve Grilli
+            <br>1975 - 1979
+            <br>1977 Topps
+            <br>Father of Jason Grilli
+        </td>
+        <td>
+            Jason Grilli
+            <br>2000 - 2017
+            <br>2016 Topps Heritage
+            <br>Son of Steve Grilli
+        </td>
     </tr>
     <tr>
         <td width="300">
             <img src="Images/1987 Topps Autos/522 Grieve GM Rangers.jpeg" width="300">
         </td>
+        <td>
+            <img src="Images/MLB/Grilli Steve.jpeg" width="300">
+        </td>
+        <td><img src="Images/MLB/Grilli Jason.jpeg" width="300"></td>
         </tr>
+    <tr>
+        <td>
+            Mike Griffin
+            <br>1979-1989
+            <br>1988 Donruss
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Griffin Mike.jpeg"></td>
+    </tr>
     </table>
 <h1>Gu</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
