--- a/Baseball/Baseball_J.htm
+++ b/Baseball/Baseball_J.htm
@@ -37,6 +37,11 @@
             <br>1965 - 1972
             <br>1969 Topps
         </td>
+        <td>
+            Edwin Jackson
+            <br>2003 - 2019
+            <br>2007 Topps
+        </td>
     </tr>
     <tr>
         <td>
@@ -44,6 +49,9 @@
         </td>
         <td>
             <img width="300" src="Images/MLB/Larry Jaster.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Jackson Edwin.jpeg">
         </td>
     </tr>
  </table>
@@ -101,6 +109,20 @@
     </td>
     <td width="300">
     </td>
+    </tr>
+</table>
+<h1 id="Ju">Ju</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+
+    <tr>
+        <td>
+            Jeff Juden
+            <br>1991 - 2000
+            <br>1991 Upper Deck
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Juden Jeff.jpeg"></td>
     </tr>
 </table>
 </body>
